prod/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-argocd
  template:
    metadata:
      labels:
        app: myapp-argocd
    spec:
      containers:
      - name: myapp-argocd
        image: nginx:1.25-alpine3.18-perl
        #resources:
        #  limits:
        #    memory: "128Mi"
        #    cpu: "500m"
        ports:
        - containerPort: 80
