prod/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp-argocd
  ports:
  - port: 8082
    targetPort: 80
