prod/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway
spec:
  hosts:
  - "example.com"
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: myapp
        subset: v1
        port:
          number: 8080
---
